--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ .Site.Language.Lang }}">
   <head>
-    <meta charset="utf-8">
-    <title>{{ block "title" . }}
-      <!-- Blocks may include default content. -->
-      {{ .Site.Title }}
-    {{ end }}</title>
+    {{ block "meta" . }}
+      <meta charset="utf-8">
+      {{ block "description" . }}
+        {{ if .Description }}
+          <meta name="description" content="{{- .Description -}}">
+        {{ end }}
+      {{ end }}
+      {{ if .Keywords }}
+<!--
+        <meta name="keywords" content="{{ range $index, $keyword := .Keywords }}{{ if gt $index 0 }},{{ end }}{{ $keyword }}{{ end }}">
+-->
+        <meta name="keywords" content="{{ delimit .Keywords ", " }}">
+      {{ end }}
+    {{ end }}
+    <title>
+      {{ block "title" . }}
+        {{/* <!-- Blocks may include default content. --> */}}
+        {{ .Site.Title }}
+      {{ end }}
+    </title>
+    {{ block "style" . }}
+      <link rel="stylesheet" type="text/css" href="{{ "/css/style.css" | relURL }}">
+    {{ end }}
   </head>
   <body>
     <!-- Code that all your templates share, like a header -->
+    {{ block "header" . }}
+      {{ partial "header.html" . }}
+    {{ end }}
     {{ block "main" . }}
       <!-- The part of the page that begins to differ between templates -->
     {{ end }}
     {{ block "footer" . }}
       <!-- More shared code, perhaps a footer but that can be overridden if need be in  -->
+      {{ partial "footer.html" . }}
+    {{ end }}
+    {{ block "script" . }}
     {{ end }}
   </body>
 </html>
