--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,17 @@
 {{ define "main" }}
-  <main aria-role="main">
-    <header class="homepage-header">
+  <main>
+    {{ if .Title }}
       <h1>{{ .Title }}</h1>
-      {{ with .Params.subtitle }}
-        <span class="subtitle">{{ . }}</span>
-      {{ end }}
-    </header>
-    <div class="homepage-content">
-      <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
-      {{.Content}}
-    </div>
-    <div>
-      <!-- Note that .Data.Pages is the equivalent of .Site.Pages on the homepage template. -->
-      {{ range first 10 .Data.Pages }}
-        {{ .Render "summary" }}
-      {{ end }}
-    </div>
+    {{ end }}
+    {{ if .Content }}
+      <article>
+        <!-- Note that the content for index.html, as a sort of list page, will pull from content/_index.md -->
+        {{ .Content }}
+      </article>
+    {{ end }}
+    <!-- Note that .Data.Pages is the equivalent of .Site.Pages on the homepage template. -->
+    {{ range first 10 (where .Data.Pages "Section" "!=" "") }}
+      {{ .Render "summary" }}
+    {{ end }}
   </main>
 {{ end }}
