--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,10 +1,5 @@
-<article class="post">
-  <header>
-    <h2><a href='{{ .Permalink }}'>{{ .Title }}</a></h2>
-    <div class="post-meta">{{ .Date.Format "Mon, Jan 2, 2006" }} - {{ .FuzzyWordCount }} Words</div>
-  </header>
+<article>
+  <h2><a href="{{ .RelPermalink }}">{{ .Title }}</a></h2>
+  <div>{{ .Date.Format "_2 January 2006" }}</div>
   {{ .Summary }}
-  <footer>
-    <a href='{{ .Permalink }}'><nobr>Read more →</nobr></a>
-  </footer>
 </article>
