--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,12 +10,14 @@
     <div>{{ .Date.Format "_2 January 2006" }}</div>
     {{ .Content }}
   </article>
-  <ul class="pagination">
-    {{ if .NextInSection }}
-      <li><a href="{{ .NextInSection.RelPermalink }}">Newer Post</a></li>
-    {{ end }}
-    {{ if .PrevInSection }}
-      <li><a href="{{ .PrevInSection.RelPermalink }}">Older Post</a></li>
-    {{ end }}
-  </ul>
+  {{ if or .NextInSection .PrevInSection }}
+    <ul class="pagination">
+      {{ if .NextInSection }}
+        <li><a href="{{ .NextInSection.RelPermalink }}">Newer Post</a></li>
+      {{ end }}
+      {{ if .PrevInSection }}
+        <li><a href="{{ .PrevInSection.RelPermalink }}">Older Post</a></li>
+      {{ end }}
+    </ul>
+  {{ end }}
 {{ end }}
