--- a/layouts/partials/adsense.html
+++ b/layouts/partials/adsense.html
@@ -10,7 +10,7 @@
          data-ad-format="auto"></ins>
 -->
     <ins class="adsbygoogle"
-         style="display: inline-block;"
+         style="display:block"
          data-ad-client="{{ $.Site.Params.adsense.client }}"
          data-ad-slot="{{ $.Site.Params.adsense.slot }}"
          data-ad-format="auto"></ins>
