--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -17,6 +17,6 @@
     </ul>
   </section>
   {{ with $.Site.Copyright | safeHTML }}
-    {{ . }}
+    <small>{{ . }}</small>
   {{ end }}
 </footer>
