--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -70,7 +70,7 @@ ul.pagination
     &.active
     &.disabled
       & > a
-        color arguments
+        color $body-color
         text-decoration none
 
 ul.taxonomy
