--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -5,15 +5,15 @@ $c4 = #2dadac
 $c5 = #452c0a
 $body-background-color = $c1
 $body-color = $c5
-$header-background-color = $c5
-$header-color = $c1
-$footer-background-color = $c5
-$footer-color = $c1
+$header-background-color = $body-color
+$header-color = $body-background-color
+$footer-background-color = $body-color
+$footer-color = $body-background-color
 $a-color = $c4
 $blockquote-border-color = darken($body-background-color, 20%)
 $code-background-color = $body-color
 $code-color = $body-background-color
-$table-border-color = $c5
+$table-border-color = $body-color
 
 body
   background-color $body-background-color
