--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -58,8 +58,15 @@ code:not(.hljs)
   color $code-color
 
 img
+  display: block
+  margin-left: auto
+  margin-right: auto
   max-height 320px
-  max-width 100%
+  max-width auto
+
+table
+  margin-left: auto
+  margin-right: auto
 
 table
 th
@@ -86,3 +93,6 @@ ul.taxonomy
     list-style none
     margin-left 0.5rem
     margin-right 0.5rem
+
+div.overflow-auto
+  overflow auto
