--- a/static/css/style-dark.css
+++ b/static/css/style-dark.css
@@ -70,7 +70,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   max-height: 320px;
-  max-width: auto;
+  max-width: 100%;
 }
 table {
   margin-left: auto;
