--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,6 +10,7 @@
     <div>{{ .Date.Format "_2 January 2006" }}</div>
     {{ if $.Site.IsServer }}
       <div>{{ .Date.Format "15:04:05" }}</div>
+      <div>{{ .ReadingTime }} minutes</div>
       <div>{{ .TableOfContents }}</div>
       <div>{{ .WordCount }}</div>
     {{ end }}
